Completed desktop updates.

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,21 @@
-// Navigation Styles here
+.header {
+
+    .container {
+        display: flex;
+        justify-content: space-between;
+        max-width: 800px;
+    }
+    .nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 45%;
+        padding: 0 30px;
+    }
+    a {
+        white-space: nowrap;
+        text-decoration: none;
+        font-size: 1.6rem;
+        color: @font-color;
+    }
+}
