--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,21 @@
+
+.header {
+  display: flex;
+  width: 100%;
+  border-bottom: 2px dashed silver;
+  align-items: center;
+  padding: 20px;
+}
+
 .home {
+
+  .splash-section {
+    border-bottom: 2px dashed silver;
+
+    .text-content {
+      margin: 15px 0;
+    }
+  }
 
   .content-section {
     margin: 30px 0;
@@ -56,6 +73,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .create-button();
+        .button-styler(teal,10px, dark)
+      }
     }
   }
 }// home
