--- a/css/index.css
+++ b/css/index.css
@@ -168,10 +168,23 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+}
+.header {
+  display: flex;
+}
 .header .container {
   display: flex;
   justify-content: space-between;
   max-width: 800px;
+}
+@media (max-width: 500px) {
+  .header .container {
+    flex-direction: column;
+  }
 }
 .header .nav {
   display: flex;
@@ -179,6 +192,17 @@ img {
   justify-content: space-between;
   width: 45%;
   padding: 0 30px;
+}
+@media (max-width: 500px) {
+  .header .nav {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .header .text-content {
+    text-align: center;
+    padding-bottom: 10px;
+  }
 }
 .header a {
   white-space: nowrap;
@@ -216,13 +240,29 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    text-align: center;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -230,6 +270,11 @@ img {
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -243,6 +288,11 @@ img {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -252,9 +302,20 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
 }
 .home .content-pick .destination .btn {
   width: 80%;
@@ -266,6 +327,11 @@ img {
   font-style: bold;
   border-radius: 10px;
   background-color: teal;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    width: 100%;
+  }
 }
 .home .content-pick .destination .btn:hover {
   background-color: #004d4d;
