--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,9 +1,14 @@
 .header {
+    display: flex;
 
     .container {
         display: flex;
         justify-content: space-between;
         max-width: 800px;
+        @media @mobile {
+            flex-direction: column;
+        }
+
     }
     .nav {
         display: flex;
@@ -11,6 +16,17 @@
         justify-content: space-between;
         width: 45%;
         padding: 0 30px;
+        
+        @media @mobile {
+            width: 100%;
+        }
+    }
+
+    .text-content {
+        @media @mobile {
+            text-align: center;
+            padding-bottom: 10px;
+        }
     }
     a {
         white-space: nowrap;
