--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,7 +99,7 @@
 
       .btn {
         .create-button();
-        .button-styler(teal,10px, dark)
+        .button-styler(@eastern-blue,10px, dark)
       }
     }
   }
